# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-23 17:06:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-153

    Summary:
      Added convenience functions
    Revision:
      missingh--head--0.7--patch-153


    new files:
     libsrc/MissingH/IO/HVFS/Utils.hs

    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs libsrc/MissingH/Path.hs


2004-12-23 02:53:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-152

    Summary:
      Checkpointing nlst
    Revision:
      missingh--head--0.7--patch-152


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-23 01:52:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-151

    Summary:
      Added stat, syst
    Revision:
      missingh--head--0.7--patch-151


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 22:43:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-150

    Summary:
      Upload works
    Revision:
      missingh--head--0.7--patch-150


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 22:23:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-149

    Summary:
      FTP downloading works
    Revision:
      missingh--head--0.7--patch-149


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 22:17:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-148

    Summary:
      Got RETR written!
    Revision:
      missingh--head--0.7--patch-148


    modified files:
     ChangeLog TODO libsrc/MissingH/IO.hs
     libsrc/MissingH/IO/HVIO.hs
     libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 19:49:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-147

    Summary:
      Checkpointing port support
    Revision:
      missingh--head--0.7--patch-147


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs

