@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-23 17:11:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-154
+
+    Summary:
+      Eased encapsulation
+    Revision:
+      missingh--head--0.7--patch-154
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/IO/HVFS.hs
+
+
 2004-12-23 17:06:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-153
 
     Summary:
